# InpExchange

./: .gitignore  README.md  pyproject.toml
.trae/documents/: assembly_plan.md
InpExchange/: BaseObject.py  GmshToAbaqus.py  InpReader.py  ModuleObject.py  __init__.py
InpExchange/Applications/: GmshToAbaqus.py  SplitNodes.py
InpExchange/frame/: BaseObject.py  ModuleObject.py
InpExchange/math/: geometry.py
InpExchange/tests/: test_GmshToAbaqus.py  test_discolution.py  test_read_abaqus_inp.py  test_split_node.py
